--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    color: #A88862;
+    color: #C18B3C;
     margin: 3em 0;
 }
 
